--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="nMjrhuuWf00NBEnH0O9j-d27DgrQCZRZgqeZQX0rR7A" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>أسعار العملات في السوق السوداء اليوم في مصر</title>
   <style>
@@ -244,3 +245,4 @@
 
 </body>
 </html>
+
